# riftbar

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
example/: style.css
examples/BinaryBar/: config.toml  style.scss  theme.scss
examples/SimpleGruvboxBar/: config.toml  style.scss  theme.scss
examples/binaryBar/: config.toml  style.css  style.scss
src/: clock.rs  dummy.rs  hyprlandworkspaces.rs  main.rs  mpris.rs  network.rs
src/config/: config.rs  mod.rs  scss.rs  toml.rs
src/modules/: action.rs  active_window.rs  audio.rs  battery.rs  box_module.rs  clock.rs  custom_module.rs  dummy.rs  hyprland_workspaces.rs  hyprlandworkspaces.rs  mod.rs  mpris_module.rs  network.rs  revealer.rs  slider.rs  tray.rs  tray_watcher.rs
src/modules/mpris/: dbus_util.rs  mod.rs  widget.rs
src/modules/tray/: host.rs  mod.rs  watcher.rs  widget.rs
src/shared/: mod.rs  util.rs
