[package]
name = "riftbar"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }
gtk4 = "0.10.3"
gtk4-layer-shell = "0.7.1"
glib = "0.21.5"
tokio = { version = "1", features = ["full"] }
mpris = "2.0"
hyprland = "0.4.0-beta.3"
grass = "0.13.4"
once_cell = "1.21.3"
chrono = "0.4.42"
